Changelog for mk-duplicate-key-checker:

   * Made performance_schema an always ignored database (issue 1193).

2010-06-08: version 1.2.13

   * Connections did not preserve server SQL modes (issue 801).

2010-04-01: version 1.2.12

   * Added ability to specify a DSN on the command line.
   * Added DSN OPTIONS section to POD (issue 55).
   * Stopped caching SHOW CREATE TABLE info.

2010-03-01: version 1.2.11

   * Duplicate clustered index names were not preserved (issue 901).
   * Multi-column clustered indexes were not handled correctly (issue 904).

2010-01-06: version 1.2.10

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-12-02: version 1.2.9

   * Added key definitions to report (issue 693).

2009-10-30: version 1.2.8

   * Printing duplicate key with prefixed column caused crash (issue 663).
   * --set-vars did not work (issue 597).
   * Command line options did not override config file options (issue 617).

2009-08-31: version 1.2.7

   * "DROP FOREIGN KEY" was not printed for foreign keys (issue 548).
   * Enhanced rules for clustered keys (issue 295).
   * Changed "key" to "index" in output where appropriate (issue 548).

2009-07-31: version 1.2.6

   * Added RISKS section to POD (issue 538).
   * The script crashed immediately on Windows (issue 531).

2009-06-30: version 1.2.5

   * --ask-pass did not work (issue 453).
   * Key size for uppercase keys caused crash in certain cases (issue 364).
   * Updates to shared code.

2009-06-02: version 1.2.4

   * Sorted options alphabetically in the POD.

2009-05-03: version 1.2.3

   * Columns with backticks in comments caused a crash (issue 330).
   * Changed the --allstruct option to --all-structs.
   * Changed the --askpass option to --ask-pass.
   * Changed the --engine option to --engines.
   * Changed the --fuction option to --key-types.
   * Changed the --ignoredb option to --ignore-databases.
   * Changed the --ignoreengine option to --ignore-engines.