@@ -1,5 +1,6 @@
 Changelog for mk-duplicate-key-checker:
 
+   * Uppercase index names caused incorrect ALTER TABLE (issue 1192).
    * Made performance_schema an always ignored database (issue 1193).
 
 2010-06-08: version 1.2.13
